--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li class="opcion"><a href="pages/caja.html">Modelo de caja</a></li>
             <li class="opcion"><a href="pages/componentes.html">Componentes</a></li>
             <li class="opcion"><a href="pages/empezandoconjs.html">JS basico</a></li>
+            <li class="opcion"><a href="pages/eventos.html">Eventos</a></li>
+            <li class="opcion"><a href="pages/producto.html">Productos</a></li>
         </ul>
     </section>
 </body>
