--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <li class="opcion"><a href="pages/empezandoconjs.html">JS basico</a></li>
             <li class="opcion"><a href="pages/eventos.html">Eventos</a></li>
             <li class="opcion"><a href="pages/producto.html">Productos</a></li>
+            <li class="opcion"><a href="pages/concurrencia.html">Concurrencia</a></li>
+            <li class="opcion"><a href="pages/trycatch.html">Try catch</a></li>
         </ul>
     </section>
 </body>
