--- a/pages/producto.html
+++ b/pages/producto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <h2>Carrito de compras</h2>
+    <ul id="carritoLista"></ul>
     <div class="contenedor" id="contenedor"></div>
 
-
+    
     <script src="../js/js_producto.js"></script>
+    <script src=".../js/js_persistencia"></script>
 </body>
 </html>
